src/snapshots/tests__tests::binary_tree_all_false.snap
---
created: "2019-03-05T11:59:13.027667Z"
creator: insta@0.7.0
source: src/lib.rs
expression: maze
---
+---+---+---+
|           |
+---+---+   +
|           |
+---+---+   +
|           |
+---+---+---+
