src/snapshots/tests__tests::binary_tree_all_true.snap
---
created: "2019-03-05T11:59:13.027636Z"
creator: insta@0.7.0
source: src/lib.rs
expression: maze
---
+---+---+---+
|           |
+   +   +   +
|   |   |   |
+   +   +   +
|   |   |   |
+---+---+---+
