src/snapshots/tests__tests::binary_tree_alternating_bool.snap
---
created: "2019-03-05T11:59:13.027600Z"
creator: insta@0.7.0
source: src/lib.rs
expression: maze
---
+---+---+---+
|           |
+---+   +   +
|       |   |
+   +---+   +
|   |       |
+---+---+---+
