src/snapshots/tests__tests::new_3x3.snap
---
created: "2019-08-21T12:11:32.434589802Z"
creator: insta@0.7.4
source: src/lib.rs
expression: maze
---
┌───┬───┬───┐
│   │   │   │
├───┼───┼───┤
│   │   │   │
├───┼───┼───┤
│   │   │   │
└───┴───┴───┘
