src/snapshots/tests__tests::next_cell_open_north_wall.snap
---
created: "2019-03-05T11:59:13.027692Z"
creator: insta@0.7.0
source: src/lib.rs
expression: maze
---
+---+---+---+
|   |   |   |
+---+---+---+
|   |   |   |
+---+   +---+
|   |   |   |
+---+---+---+
