src/snapshots/tests__tests::open_east_wall.snap
---
created: "2019-08-21T12:11:32.469593812Z"
creator: insta@0.7.4
source: src/lib.rs
expression: maze
---
┌───┬───┬───┐
│   │   │   │
├───┼───┼───┤
│   │   │   │
├───┴───┼───┤
│       │   │
└───────┴───┘
