src/snapshots/tests__tests::open_north_wall.snap
---
created: "2019-08-21T12:11:32.484758104Z"
creator: insta@0.7.4
source: src/lib.rs
expression: maze
---
┌───┬───┬───┐
│   │   │   │
├───┼───┼───┤
│   │   │   │
│   ├───┼───┤
│   │   │   │
└───┴───┴───┘
