src/snapshots/tests__tests::sidewinder_all_false.snap
---
created: "2019-08-21T12:11:32.493883709Z"
creator: insta@0.7.4
source: src/lib.rs
expression: maze
---
┌───────────┐
│           │
├───────╴   │
│           │
├───────╴   │
│           │
└───────────┘
