src/snapshots/tests__tests::sidewinder_all_true.snap
---
created: "2019-03-05T11:59:13.090489Z"
creator: insta@0.7.0
source: src/lib.rs
expression: maze
---
+---+---+---+
|           |
+   +   +   +
|   |   |   |
+   +   +   +
|   |   |   |
+---+---+---+
